style: Fix some more sonar issues with service